botão está funcionando agora

--- a/src/app/cadastrar-alunos/cadastrar-alunos.component.html
+++ b/src/app/cadastrar-alunos/cadastrar-alunos.component.html
@@ -30,7 +30,7 @@
       formControlName="course"
       >
     </div>
-    <button type="submit" class="btn btn-primary">Salvar</button>
+    <button type="submit" class="btn btn-primary"(click)="save()">Salvar</button>
     </form>
     <form>
     <h2 class="mt-5 text-center">Alunos:</h2>
