cadastro alunos finalizado

--- a/src/app/cadastrar-alunos/cadastrar-alunos.component.html
+++ b/src/app/cadastrar-alunos/cadastrar-alunos.component.html
@@ -10,7 +10,13 @@
       class="form-control"
       id="nome"
       formControlName="name"
-      >
+      />
+      <small *ngIf="name.touched && name.hasError('minlength')" class="text-danger">
+          * O nome tem que ter no mínimo 3 caracteres
+      </small>
+      <small *ngIf="name.touched && name.hasError('required')" class="text-danger">
+        * O Nome é requerido!
+    </small>
     </div>
     <div class="mb-3">
       <label for="Curso" class="form-label">Curso</label>
@@ -19,9 +25,12 @@
       class="form-control"
       id="Curso"
       formControlName="course"
-      >
+      />
+      <small *ngIf="course.touched && course.hasError('required')" class="text-danger">
+        * O Curso é requerido!
+    </small>
     </div>
-    <button type="submit" class="btn btn-primary"(click)="save()">Salvar</button>
+    <button type="submit" class="btn btn-success"[disabled]="!formGroupStudent.valid"(click)="save()">Salvar</button>
     <h2 class="mt-5 text-center">Alunos:</h2>
     <table class="table table-striped">
       <thead>
@@ -29,7 +38,7 @@
           <th scope="col">Matricula</th>
           <th scope="col">Nome</th>
           <th scope="col">Curso</th>
-          <th class="d-flex justify-content-end" scope="col">Opcoes</th>
+          <th class="text-center" scope="col">Opcoes</th>
         </tr>
       </thead>
       <tbody>
@@ -38,8 +47,8 @@
           <td>{{student.name}}</td>
           <td>{{student.course}}</td>
           <td class="d-flex jusitfy-content-end">
-            <button  class="btn btn-primary" (click)="edit(student)">Editar</button>
-            <button  class="btn btn-primary" (click)="delete(student)">Remover</button>
+            <button  class="btn btn-primary me-2" (click)="edit(student)">Editar</button>
+            <button  class="btn btn-primary me-2" (click)="delete(student)">Remover</button>
           </td>
         </tr>
       </tbody>
